add: 削除機能を実装

--- a/src/options/style.scss
+++ b/src/options/style.scss
@@ -9,3 +9,17 @@ html {
     margin-bottom: 0;
   }
 }
+
+.p-dialog {
+  .p-dialog-header {
+    padding: 1rem;
+    border-bottom: var(--surface-border) 1px solid;
+  }
+  .p-dialog-content {
+    padding: 1rem;
+  }
+  .p-dialog-footer {
+    padding: 1rem;
+    border-top: var(--surface-border) 1px solid;
+  }
+}
